css/styles.css
@font-face{
  font-family: lato;
  src: url(../fonts/Lato-Regular.woff);
}

#mainNav {
  min-height: 56px;
  background-color: #fff;
}


#mainNav .navbar-toggler {
  /* font-size: 80%; */
  padding: 0.75rem;
  color: #474747;
  border: none;
}

#mainNav .navbar-toggler:focus {
  outline: none;
}

#mainNav .navbar-brand {
  color: #161616;
  font-weight: 700;
  padding: .9rem 0;
}

#mainNav .navbar-nav .nav-item:hover {
  color: fade(white, 80%);
  outline: none;
  background-color: transparent;
}

#mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
  outline: none;
  background-color: transparent;
}

@media (min-width: 992px) {
  #mainNav {
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: none;
    background-color: transparent;
    transition: background-color 0.3s ease-in-out;
  }
  #mainNav .navbar-brand {
    padding: .5rem 0;
    color: rgba(255, 255, 255, 0.5);
  }
  #mainNav .nav-link {
    transition: none;
    padding: 2rem 1.5rem;
    color: rgb(255, 255, 255);
  }
  #mainNav .nav-link:hover {
    color: rgba(255, 255, 255, 0.75);
  }
  #mainNav .nav-link:active {
    color: white;
  }
  #mainNav.navbar-shrink {
    background-color: #fff;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: #161616;
  }
  #mainNav.navbar-shrink .nav-link {
    color: #161616;
    padding: 1.5rem 1.5rem 1.25rem;
    border-bottom: 0.25rem solid transparent;
  }
  #mainNav.navbar-shrink .nav-link:hover {
    color: #474646;
  }
  #mainNav.navbar-shrink .nav-link:active {
    color: #474646;
  }
  #mainNav.navbar-shrink .nav-link.active {
    color: #474747;
    outline: none;
    border-bottom: 0.25rem solid #474747;
  }
}

.masthead {
  position: relative;
  width: 100%;
  height: auto;
  min-height: 35rem;
  padding: 15rem 0;
  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/home-bg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.masthead h1 {
  font-size: 2.5rem;
  color:#ffffff;
}

.masthead h2 {
  max-width: 20rem;
  font-size: 1rem;
}

@media (min-width: 768px) {
  .masthead h1 {
    font-size: 4rem;
    line-height: 4rem;
  }
}

@media (min-width: 992px) {
  .masthead {
    height: 100vh;
    padding: 0;
  }
  .masthead h2 {
    max-width: 30rem;
    font-size: 1.25rem;
  }
}

.btn {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  border: 0;
  border-radius: 0rem;
}

.btn-primary {
  background-color: #161616;
}

.btn-primary:hover {
  background-color: #161616;
}

.btn-primary:focus {
  background-color: #161616;
  color: white;
}

.btn-primary:active {
  background-color: #161616 !important;
}

.about-section {
  padding: 4rem;
}

.about-section p {
  margin-bottom: 5rem;
}

.blog-section {
  padding: 4rem 0;
}

.blog-section .featured-text {
  padding: 2rem;
}

@media (min-width: 992px) {
  .blog-section .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #64a19d;
  }
}

.blog-section .blog-text {
  padding: 3rem;
  font-size: 90%;
}

@media (min-width: 992px) {
  .blog-section .blog-text {
    padding: 5rem;
  }
  .blog-section .blog-text hr {
    border-color: #64a19d;
    border-width: .25rem;
    width: 30%;
  }
}




.services-section {
  padding: 4rem 0;
}

.blog-section .featured-text {
  padding: 2rem;
}

@media (min-width: 992px) {
  .blog-section .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #64a19d;
  }
}

.blog-section .blog-text {
  padding: 3rem;
  font-size: 90%;
}

@media (min-width: 992px) {
  .blog-section .blog-text {
    padding: 5rem;
  }
  .blog-section .blog-text hr {
    border-color: #64a19d;
    border-width: .25rem;
    width: 30%;
  }
}

.signup-section {
  padding: 10rem 0;
  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.signup-section .form-inline input {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  height: auto;
  font-family: 'Varela Round';
  font-size: 80%;
  text-transform: uppercase;
  letter-spacing: 0.15rem;
  border: 0;
}

.contact-section {
  padding: 5rem 0 0;
}

.contact-section .card {
  border: 0;
  border-bottom: 0.25rem solid #64a19d;
}

.contact-section .card h4 {
  font-size: 0.8rem;
  font-family: 'Varela Round';
  text-transform: uppercase;
  letter-spacing: 0.15rem;
}

.contact-section .card hr {
  border-color: #64a19d;
  border-width: 0.25rem;
  width: 3rem;
}

.contact-section .social {
  margin-top: 5rem;
}

.contact-section .social a {
  text-align: center;
  height: 3rem;
  width: 3rem;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 100%;
  line-height: 3rem;
  color: rgba(255, 255, 255, 0.3);
}

.contact-section .social a:hover {
  color: rgba(255, 255, 255, 0.5);
}

.contact-section .social a:active {
  color: #fff;
}

/* body {
  font-family: 'Nunito';
  letter-spacing: 0.0625em;
} */

a {
  color: #161616;
}

a:focus, a:hover {
  text-decoration: none;
  color: #616161;
}

.bg-black {
  background-color: #161616 !important;
}

.bg-primary {
  background-color: #64a19d !important;
}

.text-primary {
  color: #64a19d !important;
}

footer {
  padding: 5rem 0;
}


.icon-box {
  height: 70px;
  width: 70px;
  margin-bottom: 15px;
  border-radius: 10%;
  padding: 20px;
  background-color: #E6E6E6;
}

.icon-box span{
  color:#707070;
  font-size:30px;
}

.icon-background{
  width: 200px;
  height: 200px;
  padding: 20px;
}



.icon-stack-xl {
  height: 5rem;
  width: 5rem;
  font-size: 1.75rem;
}


.icon-stack {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border-radius: 100%;
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1rem;
  background-color: #232323;
}

#more {display: none;}

.img-thumbnail {
  padding:0 !important;
  background-color: #fff !important;
  border: none !important;
  border-radius: .25rem !important;
  max-width: 100%;
  height: auto;
  margin-bottom: 1rem;
}

